--- a/style.css
+++ b/style.css
@@ -423,6 +423,40 @@
   margin-left: 11rem;
 }
 
+.footer__form-intro {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.footer__form {
+  display: flex;
+  justify-content: collapse;
+}
+
+.footer__form-input {
+  height: 2rem;
+  border: none;
+  border-bottom-left-radius: 3px;
+  border-top-left-radius: 3px;
+}
+
+.footer__form-sentence {
+  font-size: 12px;
+  color: #737373;
+}
+
+.footer__form-btn {
+  background-color: #FFA62B;
+  border: none;
+  padding: 0 1rem;
+  border-bottom-right-radius: 3px;
+  border-top-right-radius: 3px;
+  color: white;
+  font-weight: 700;
+  font-size: 12px;
+}
+
 @media(max-width: 748px) {
 .header {
   background-color: #FAFAFA;
