Finish the responsiveness part

--- a/style.css
+++ b/style.css
@@ -162,7 +162,7 @@
 }
 
 .business-service__blue-bg {
-  background-color: #252B42;
+  background-color: rgb(11, 53, 61);
   padding-bottom: 18rem;
 }
 
@@ -617,7 +617,7 @@
 }
 
 .business-service__blue-bg {
-  background-color: #252B42;
+  background-color: rgb(11, 53, 61);
   padding-bottom: 16rem;
 }
 
